redactable/tests/ui/not_sensitive_output_serde_requires_json.stderr
error[E0277]: the trait bound `NotSensitiveDebug<u8>: serde::Serialize` is not satisfied
 --> tests/ui/not_sensitive_output_serde_requires_json.rs:7:23
  |
7 |     require_serialize(&NotSensitiveDebug(1_u8));
  |     ----------------- ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `NotSensitiveDebug<u8>`
  |     |
  |     required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `NotSensitiveDebug<u8>` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `require_serialize`
 --> tests/ui/not_sensitive_output_serde_requires_json.rs:4:25
  |
4 | fn require_serialize<T: Serialize>(_: &T) {}
  |                         ^^^^^^^^^ required by this bound in `require_serialize`

error[E0277]: the trait bound `NotSensitiveDisplay<u8>: serde::Serialize` is not satisfied
 --> tests/ui/not_sensitive_output_serde_requires_json.rs:8:23
  |
8 |     require_serialize(&NotSensitiveDisplay(1_u8));
  |     ----------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `NotSensitiveDisplay<u8>`
  |     |
  |     required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `NotSensitiveDisplay<u8>` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `require_serialize`
 --> tests/ui/not_sensitive_output_serde_requires_json.rs:4:25
  |
4 | fn require_serialize<T: Serialize>(_: &T) {}
  |                         ^^^^^^^^^ required by this bound in `require_serialize`
